--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,7 @@
 doctype html
 html
   head
-    meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width")
     title= title
-    block links
-    block scripts
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block header
-      include header
     block content
-    
